Terraform/modules/networking/main.tf
resource "aws_vpc" "cashmoney_vpc" {
  cidr_block = var.vpc_cidr_block

  tags = {
    Name = "cashmoney"
  }
}

resource "aws_subnet" "public_1a" {
  vpc_id            = aws_vpc.cashmoney_vpc.id
  cidr_block        = var.subnet_cidr_block_public_1a
  availability_zone = var.subnet_zone_1

  tags = {
    Name = "cashmoney-public-1a"
  }
}

resource "aws_subnet" "public_1b" {
  vpc_id            = aws_vpc.cashmoney_vpc.id
  cidr_block        = var.subnet_cidr_block_public_1b
  availability_zone = var.subnet_zone_1

  tags = {
    Name = "cashmoney-public-1b"
  }
}

resource "aws_subnet" "private_1a" {
  vpc_id            = aws_vpc.cashmoney_vpc.id
  cidr_block        = var.subnet_cidr_block_private_1a
  availability_zone = var.subnet_zone_2

  tags = {
    Name = "cashmoney-private-1a"
  }
}

resource "aws_subnet" "private_1b" {
  vpc_id            = aws_vpc.cashmoney_vpc.id
  cidr_block        = var.subnet_cidr_block_private_1b
  availability_zone = var.subnet_zone_2

  tags = {
    Name = "cashmoney-private-1b"
  }
}

resource "aws_internet_gateway" "gateway" {
  vpc_id = aws_vpc.cashmoney_vpc.id

  tags = {
    Name = "cashmoney"
  }
}

resource "aws_default_route_table" "public_rt" {
  default_route_table_id = aws_vpc.cashmoney_vpc.default_route_table_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gateway.id
  }

  tags = {
    Name = "cashmoney-rt-public"
  }
}

resource "aws_nat_gateway" "nat" {
  connectivity_type = "private"
  subnet_id         = aws_subnet.private_1a.id

  tags = {
    Name = "cashmoney-nat"
  }
}

resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.cashmoney_vpc.id

  route = []

  tags = {
    Name = "cashmoney-rt-private"
  }
}

resource "aws_route" "private_r" {
  route_table_id         = aws_route_table.private_rt.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat.id
}

resource "aws_route_table_association" "public_1a" {
  subnet_id      = aws_subnet.public_1a.id
  route_table_id = aws_default_route_table.public_rt.id
}

resource "aws_route_table_association" "public_1b" {
  subnet_id      = aws_subnet.public_1b.id
  route_table_id = aws_default_route_table.public_rt.id
}

resource "aws_route_table_association" "private_1a" {
  subnet_id      = aws_subnet.private_1a.id
  route_table_id = aws_route_table.private_rt.id
}

resource "aws_route_table_association" "private_1b" {
  subnet_id      = aws_subnet.private_1b.id
  route_table_id = aws_route_table.private_rt.id
}
